--- a/dwca_config/field_mapping/dwca_terms_event.yaml
+++ b/dwca_config/field_mapping/dwca_terms_event.yaml
@@ -151,32 +151,33 @@ dwcaEventContent:
                 text: Swedish Agency for Marine and Water Management
             dataGeneralizations:
                 sourceKey: 
-            dynamicProperties:
-                dynamic:
-                    -   dynamicKey: SamplingLaboratoryCode
-                        sourceKey: sampling_laboratory_code
-                    -   dynamicKey: SamplingLaboratoryName
-                        sourceKeyList: 
-                            - sampling_laboratory_name_en
-                            - sampling_laboratory_name_sv
-                    -   dynamicKey: SamplingLaboratoryAccreditated
-                        sourceKey: sampling_laboratory_accreditated
-                    -   dynamicKey: MonitoringProgramCode
-                        sourceKey: monitoring_program_code
-                    -   dynamicKey: StationMarking
-                        sourceKey: station_marking
-                    -   dynamicKey: StationExposure
-                        sourceKey: station_exposure
-                    -   dynamicKey: VisitId
-                        sourceKey: visit_id
-                    -   dynamicKey: ExpeditionId
-                        sourceKey: expedition_id
-                    -   dynamicKey: WaterLandStationType
-                        sourceKey: water_land_station_type_code
-                    -   dynamicKey: MonitoringStationType
-                        sourceKey: monitoring_station_type_code
-                    -   dynamicKey: MonitoringPurpose
-                        sourceKey: monitoring_purpose_code
+            # moved to emof
+            #dynamicProperties:
+            #    dynamic:
+            #        -   dynamicKey: SamplingLaboratoryCode
+            #            sourceKey: sampling_laboratory_code
+            #        -   dynamicKey: SamplingLaboratoryName
+            #            sourceKeyList: 
+            #                - sampling_laboratory_name_en
+            #                - sampling_laboratory_name_sv
+            #        -   dynamicKey: SamplingLaboratoryAccredited
+            #            sourceKey: sampling_laboratory_accreditated
+            #        -   dynamicKey: MonitoringProgramCode
+            #            sourceKey: monitoring_program_code
+            #        -   dynamicKey: StationMarking
+            #            sourceKey: station_marking
+            #        -   dynamicKey: StationExposure
+            #            sourceKey: station_exposure
+            #        -   dynamicKey: VisitId
+            #            sourceKey: visit_id
+            #        -   dynamicKey: ExpeditionId
+            #            sourceKey: expedition_id
+            #        -   dynamicKey: WaterLandStationType
+            #            sourceKey: water_land_station_type_code
+            #        -   dynamicKey: MonitoringStationType
+            #            sourceKey: monitoring_station_type_code
+            #        -   dynamicKey: MonitoringPurpose
+            #            sourceKey: monitoring_purpose_code
             # Extra:
             collectionCode:
                 sourceKey: dataset_name
@@ -191,44 +192,24 @@ dwcaEventContent:
                 sourceKey: sampling_event_key
             type:
                 sourceKey: 
-            samplingProtocol:
-                dynamic: 
-                    -   dynamicKey: MethodReference
-                        sourceKey: method_reference_code
-                    -   dynamicKey: MethodDocumentation
-                        sourceKey: method_documentation
-                    -   dynamicKey: SamplerTypeCode
-                        sourceKey: sampler_type_code
-                    -   dynamicKey: PlanktonSamplingMethod
-                        sourceKey: plankton_sampling_method_code
-                    -   dynamicKey: SizeClassReferenceList
-                        sourceKey: size_class_ref_list
+            # samplingProtocol:
+            #     dynamic: 
+            #         -   dynamicKey: MethodReference
+            #             sourceKey: method_reference_code
+            #         -   dynamicKey: MethodDocumentation
+            #             sourceKey: method_documentation
+            #         -   dynamicKey: SamplerTypeCode
+            #             sourceKey: sampler_type_code
+            #         -   dynamicKey: PlanktonSamplingMethod
+            #             sourceKey: plankton_sampling_method_code
+            #         -   dynamicKey: SizeClassReferenceList
+            #             sourceKey: size_class_ref_list
             sampleSizeValue:
                 sourceKey: sampled_volume_l
             sampleSizeUnit:
                 sourceKey: 
             samplingEffort:
                 sourceKey: 
-                ### Moved to eMoF:
-                # dynamic: 
-                #     -   dynamicKey: SampledVolume(L)
-                #         sourceKey: sampled_volume_l
-                #     -   dynamicKey: SamplerArea(cm2)
-                #         sourceKey: sampler_area_cm2
-                #     -   dynamicKey: WireAngle(deg)
-                #         sourceKey: wire_angle_deg
-                #     -   dynamicKey: FlowmeterLength(m)
-                #         sourceKey: flowmeter_length_m
-                #     -   dynamicKey: MeshSize(um)
-                #         sourceKey: mesh_size_um
-                #     -   dynamicKey: UpperMeshSize(um)
-                #         sourceKey: upper_mesh_size_um
-                #     -   dynamicKey: LowerMeshSize(um)
-                #         sourceKey: lower_mesh_size_um
-                #     -   dynamicKey: FactorsInfluencingCode
-                #         sourceKey: factors_influencing_code
-                #     -   dynamicKey: SampleSplittingCode
-                #         sourceKey: sample_splitting_code
             eventDate:
                 sourceKeyList: 
                     - sample_date
@@ -323,12 +304,13 @@ dwcaEventContent:
                 sourceKey: 
             dataGeneralizations:
                 sourceKey: 
-            dynamicProperties:
-                dynamic:
-                    -   dynamicKey: Orderer
-                        sourceKeyList: 
-                            - sample_orderer_name_en
-                            - sample_orderer_name_sv
+            # moved to emof
+            #dynamicProperties:
+            #    dynamic:
+            #        -   dynamicKey: Orderer
+            #            sourceKeyList: 
+            #                - sample_orderer_name_en
+            #                - sample_orderer_name_sv
             # Extra:
             collectionCode:
                 sourceKey: dataset_name
