--- a/dwca_config/field_mapping/dwca_terms_occurrence.yaml
+++ b/dwca_config/field_mapping/dwca_terms_occurrence.yaml
@@ -55,8 +55,10 @@ dwcaOccurrenceContent:
             # taxonID:
             #    sourceKey: worms_lsid
             scientificNameID:
-                sourceKey: worms_lsid
-                # sourceKey: aphia_id
+                sourceKeyList:
+                - worms_lsid
+                - worms_id
+                - aphia_id
             acceptedNameUsage:
                 sourceKey: worms_valid_name
 
@@ -103,8 +105,6 @@ dwcaOccurrenceContent:
                 sourceKey: 
             dynamicProperties:
                 dynamic: 
-                    # -   dynamicKey: ReportedScientificName
-                    #     sourceKey: reported_scientific_name
                     -   dynamicKey: SizeClass
                         sourceKey: size_class
                     -   dynamicKey: SizeClassRangeMin
@@ -117,15 +117,15 @@ dwcaOccurrenceContent:
                         sourceKey: detached
                     -   dynamicKey: Recruits
                         sourceKey: recruits
-                    -   dynamicKey: Bitemark
-                        sourceKey: bitemark
-                    -   dynamicKey: DegreeBiofouling
-                        sourceKey: degree_biofouling
-                    -   dynamicKey: AnalyticalLaboratoryCode
-                        sourceKey: analytical_laboratory_code
-                    -   dynamicKey: AnalyticalLaboratoryName
-                        sourceKeyList: 
-                            - analytical_laboratory_name_en
-                            - analytical_laboratory_name_sv
-                    -   dynamicKey: AnalyticalLaboratoryAccreditated
-                        sourceKey: analytical_laboratory_accreditated
+                    #-   dynamicKey: Bitemark
+                    #    sourceKey: bitemark
+                    #-   dynamicKey: DegreeBiofouling
+                    #    sourceKey: degree_biofouling
+                    #-   dynamicKey: AnalyticalLaboratoryCode
+                    #    sourceKey: analytical_laboratory_code
+                    #-   dynamicKey: AnalyticalLaboratoryName
+                    #    sourceKeyList: 
+                    #        - analytical_laboratory_name_en
+                    #        - analytical_laboratory_name_sv
+                    #-   dynamicKey: AnalyticalLaboratoryAccredited
+                    #    sourceKey: analytical_laboratory_accreditated
