--- a/dwca_config/eml_metadata/eml_zooplankton_nat.yaml
+++ b/dwca_config/eml_metadata/eml_zooplankton_nat.yaml
@@ -1,54 +1,58 @@
-
 # A part of the DarwinCore-Archive, DwC-A, generator.
 # GitHub: https://github.com/sharkdata/darwincore
 
-additionalMetadata: 
-    metadata: 
+additionalMetadata:
+    metadata:
         gbif:
-            citation: 
+            citation: >
                 Stockholm University, Umeå University, 
                 Swedish Meteorological and Hydrological Institute, 
                 Gothenburg University, 
                 Swedish Agency for Marine and Water Management and 
                 Swedish Environmental Protection Agency (2022). 
-                National zooplankton monitoring in Sweden since 1979.
+                SHARK - National marine environmental monitoring of zooplankton in Sweden since 1979
 
-dataset: 
-    title: SHARK - National marine environmental monitoring of zooplankton in Sweden since 1979
+dataset:
+    title: >
+        SHARK - National marine environmental monitoring of zooplankton in Sweden since 1979
 
-    abstract: 
-        para: 
-            -   The national monitoring program was initiated by the Swedish Environmental Protection Agency and is now financed by the Swedish Agency for Marine and Water Management. 
-                Monitoring is performed by Stockholm University, Umeå University, Swedish Meteorological and Hydrological Institute and Gothenburg University. 
-            -   'Data are stored in the Swedish Ocean Archive (SHARK), by the Swedish Meteorological and Hydrological Institute (SMHI). Data should be sampled and analyzed according to the HELCOM COMBINE Manual - Part C Annex C7 Mesozooplankton (https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf). However, deviations from the manual might occur.'
-            -   'Information about the program and the methods are available in Swedish at the website of Swedish Agency for Marine and Water Management, https://www.havochvatten.se/vagledning-foreskrifter-och-lagar/vagledningar/ovriga-vagledningar/undersokningstyper-for-miljoovervakning/undersokningstyper/djurplankton-trend--och-omradesovervakning.html'
+    abstract:
+        para:
+            - >
+                The national monitoring program was initiated by the Swedish Environmental Protection Agency and is now financed by the Swedish Agency for Marine and Water Management.
+            - >
+                Monitoring is performed by Stockholm University, Umeå University, Swedish Meteorological and Hydrological Institute and Gothenburg University. Data are stored in the Swedish Ocean Archive (SHARK) by the Swedish Meteorological and Hydrological Institute (SMHI).
+            - >
+                Data should be sampled and analyzed according to the HELCOM COMBINE Manual - Part C Annex C7 Mesozooplankton (https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf). However, deviations from the manual might occur. Information about the
+                program and the methods are available in Swedish at the website of Swedish Agency for Marine and Water Management, https://www.havochvatten.se/vagledning-foreskrifter-och-lagar/vagledningar/ovriga-vagledningar/undersokningstyper-for-miljoovervakning/undersokningstyper/djurplankton-trend--och-omradesovervakning.html
 
-    methods: 
-        methodStep: 
-            description: 
-                para:
-                    -   'Data should be sampled and analyzed according to the HELCOM COMBINE Manual - Part C Annex C7 Mesozooplankton (https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf). However, deviations from the manual might occur.'
-        sampling: 
+    methods:
+        methodStep:
             description:
-                Samples are taken with vertical hauls using a WP-2 net. The samples are preserved and subsequently analyzed using microscopy. 
+                para: >
+                    Data should be sampled and analyzed according to the HELCOM COMBINE Manual - Part C Annex C7 Mesozooplankton (https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf). However, deviations from the manual might occur.
+        sampling:
+            description: >
+                Samples are taken with vertical hauls using a WP-2 net. The samples are preserved and subsequently analyzed using microscopy.
 
-    coverage: 
-        geographicCoverage: 
-            geographicDescription: 
-                'Data are collected within the following marine ecoregions: http://marineregions.org/mrgid/2401, http://marineregions.org/mrgid/2374, http://marineregions.org/mrgid/2379'
-        # taxonomicCoverage: 
+    coverage:
+        geographicCoverage:
+            geographicDescription: >
+                Data are collected within the following marine region: http://marineregions.org/mrgid/2401
+
+        # taxonomicCoverage:
         #     Phylum:
         #     - Arthropoda
         #     - Protozoa
         #     - Rotifera
         #     - Chordata
-        #     - Mollusca 
+        #     - Mollusca
         #     - Annelida
         #     - Bryozoa
         #     - Chaetognatha
         #     - Echinodermata
         #     - Ciliophora
-        #     - Phoronida, 
+        #     - Phoronida,
         #     - Cnidaria
         #     - Nematoda
         #     - Platyhelminthes
@@ -57,23 +61,8 @@ dataset:
         #     - Nemertea
         #     - Miozoa
 
-    keywordSet: 
-        keywords: 
-            keyword: 
+    keywordSet:
+        keywords:
+            keyword:
                 - Samplingevent
-        keywordThesaurus: 
-            'GBIF Dataset Type Vocabulary: http://rs.gbif.org/vocabulary/gbif/dataset_type.xml'
-
-
-    creator: 
-        individualName: 
-            givenName: SHARK
-            surName: SMHI
-        organizationName: 
-            Swedish Meteorological and Hydrological Institute, 
-
-
-    metadataProvider: 
-        individualName: 
-            givenName: SHARK
-            surName: SMHI
+        keywordThesaurus: "GBIF Dataset Type Vocabulary: http://rs.gbif.org/vocabulary/gbif/dataset_type.xml"
